# gold_digger

./: pyproject.toml
.github/workflows/: deploy.yaml
config/: tickers.yaml
src/: database.py  main.py  services.py  test.py  yfinance_client.py
src/scripts/db_scripts/: sync_companies_stocks.sql  triggers.sql
src/scripts/db_scripts/tables/: call_options.sql  companies.sql  put_options.sql  stock_prices.sql  stocks.sql
src/utils/: logging_config.py  mapping.py
